--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,4 @@
 
-/*header {color: #F4FDFE;
-        background-color: #4aaaa5;
-        size:24px;
-        height:.75in;
-        width:2in;
-        font-size:24px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-weight:bold;
-        Position: relative;
-        left: 2in;
-}*/
 header {
     background-color: #ffffff;
     width: 960px;
@@ -70,19 +57,28 @@ nav {
     font-size: 18px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
+/* visited link */
+a:visited {
+    color: green;
+}
 
+/* mouse over link */
+a:hover {
+    color: hotpink;
+}
+/*navigation for portfolio*/
 #portfolio{color:#A19F9F;
      float: right;
     font-size: 18px;
 
 }
-
+/*navigation for contact*/
 #contact{color:#A19F9F;
     float: right;
     font-size: 18px;
 
 }
-
+/*navigation for about*/
 #index{color:#A19F9F;
     float: right;
     font-size: 18px;}
@@ -91,6 +87,8 @@ nav {
 #about {clear: both;
     margin: 50px auto; 
     width: 960px; 
+    
+
 }
 
 a {text-decoration: none; 
@@ -113,15 +111,15 @@ p  {font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 
 img {
     float: left;
-    height:1.5in;
-    width:2in;
+    height:2in;
+    width:1.3in;
+    margin-left: 26px;
     
 }
 
+/*background image*/
 
-body {background-image:url("../assets/basic.png");
-    background-color:black;
-    
+body {background-image:url("../images/basic.png");
 
 }
 
@@ -174,13 +172,7 @@ form {
 input, textarea {
     width: 100%;
 }
-#footer2 {height:.75in;
-    width:100%;
-    background-color: #666666;
-    position: sticky;
-    bottom: 10px;
-    border-top:.05in solid #4aaaa5;
-}
+
 button {   background-color: #4aaaa5;
     border: none;
     color: #ffffff;
@@ -193,4 +185,37 @@ button {   background-color: #4aaaa5;
     cursor: pointer;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     
+}
+
+/******CSS for Portfolio Page*******/
+
+#about2 {clear: both;
+    margin: 50px auto; 
+    width: 960px; 
+    height:100%;
+    margin-bottom: 25px;
+    
+}
+#animals{padding-bottom: 25px;
+    height:120;
+    width:160;
+
+
+}
+
+#nature{padding-bottom: 25px;
+    height:120;
+    width:160;
+}
+#tech{padding-bottom: 25px;
+    height:120;
+    width:160;
+}
+#people{padding-bottom: 25px;
+    height:120;
+    width:160;
+}
+#arch{padding-bottom: 25px;
+    height:120;
+    width:160;
 }
